<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/signupLayout"
    android:background="@drawable/bg"
    android:textAlignment="textStart"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/txtXacNhan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/txtNote4"
        android:textAlignment="textStart"
        android:textColor="#fee901"
        android:textSize="9pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtMatKhau" />

    <TextView
        android:id="@+id/txtHoTen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/txtNote1"
        android:textAlignment="textStart"
        android:textColor="#fee901"
        android:textSize="9pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line1" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/txtNote2"
        android:textAlignment="textStart"
        android:textColor="#fee901"
        android:textSize="9pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtHoTen" />

    <TextView
        android:id="@+id/txtDangKy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/txtDangKy"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="21pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDangKy"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="28dp"
        android:background="#ffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDangKy"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edtHoTen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="#ffffff"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/txtHintHoTen"
        android:inputType="textPersonName"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textColorHighlight="#ffffff"
        android:textColorHint="#B3FFFFFF"
        android:textColorLink="#ffffff"
        android:textSize="12pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHoTen" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="#ffffff"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/txtHintEmail"
        android:inputType="textEmailAddress"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textColorHighlight="#ffffff"
        android:textColorHint="#B3FFFFFF"
        android:textColorLink="#ffffff"
        android:textSize="12pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <EditText
        android:id="@+id/edtMatKhau"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="#ffffff"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/txtHintMatKhau"
        android:inputType="textPassword"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textColorHighlight="#ffffff"
        android:textColorHint="#B3FFFFFF"
        android:textColorLink="#ffffff"
        android:textSize="12pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMatKhau" />

    <EditText
        android:id="@+id/edtXacNhan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="#ffffff"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/txtHintXacNhan"
        android:inputType="textPassword"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textColorHighlight="#ffffff"
        android:textColorHint="#B3FFFFFF"
        android:textColorLink="#ffffff"
        android:textSize="12pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtXacNhan" />

    <Button
        android:id="@+id/btnDangKy"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/custom_button"
        android:fontFamily="sans-serif-medium"
        android:paddingBottom="5dp"
        android:text="@string/btnDangKy2"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtXacNhan" />

    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="130dp"
        android:background="@null"
        android:src="@drawable/cancel"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line2" />

    <TextView
        android:id="@+id/txtMatKhau"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/txtNote3"
        android:textAlignment="textStart"
        android:textColor="#fee901"
        android:textSize="9pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>